Show user profile picture
on onAuthStateChanged (firebase observer) when user is logged in

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 						<img src="assets/icons/icon-sign-out.svg" class="icon-img-btn" />
 					</button>
 				</nav>
-				<img src="assets/gifs/jerryandthebird.gif" />
+				<div class="app-container">
+					<div class="user-section">
+						<img id="user-profile-picture" />
+					</div>
+				</div>
 			</div>
 		</section>
 
