--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 				<div class="app-container">
 					<div class="user-section">
 						<img id="user-profile-picture" />
+						<h2 id="user-greeting"></h2>
 					</div>
 				</div>
 			</div>
